# Hazel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
SandBox/: CMakeLists.txt  sandbox_app.cpp
hazel/: CMakeLists.txt
hazel/src/: hazel.h  hzpch.h
hazel/src/hazel/: application.cpp  application.h  core.h  entry_point.h  input.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.h  mouse_button_code.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  window.h
hazel/src/hazel/core/: application.cpp  application.h  core.h  entry_point.h  input.cpp  input.h  key_code.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  mouse_button_code.h  time_step.h  window.cpp  window.h
hazel/src/hazel/debug/: instrumentor.cpp  instrumentor.h
hazel/src/hazel/events/: application_event.h  event.h  key_event.h  mouse_event.h
hazel/src/hazel/imgui/: imgui_build.cpp  imgui_layer.cpp  imgui_layer.h
hazel/src/hazel/renderer/: buffer.cpp  buffer.h  graphics_context.cpp  graphics_context.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
hazel/src/platform/opengl/: imgui_opengl_renderer.cpp  opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
hazel/src/platform/windows/: windows_input.cpp  windows_input.h  windows_window.cpp  windows_window.h
sandbox/: sandbox_app.cpp
sandbox/assets/shaders/: flat_color.glsl  texture.glsl
sandbox/src/: example_layer.cpp  example_layer.h  sandbox_2d.cpp  sandbox_2d.h  sandbox_app.cpp
scripts/: build.sh  run.sh
